syntax = "proto3";

package pb;

option go_package = "./";

service AdminService {    
    rpc GetAllPlans(AdNoParam) returns(AdPlanList);
    rpc GetSubscriptionByID(SubscriptionID) returns (AdSubscription);
}

message SubscriptionID {
    uint32 ID = 1;
}

message AdNoParam{}

message AdPlanList {
    repeated AdSubscription plans = 1;
}

message AdSubscription {
    uint32 ID = 1;
    string plan = 2;  
    string duration = 3;    
    double price = 4;      
    double gst = 5;        
    uint32 total_price = 6;
}